<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:text="@string/baslik"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <LinearLayout 
     android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <ImageView
     android:id="@+id/imageView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:src="@drawable/dramatiksincap" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/barneyseytanikahkaha" />

 <ImageView
     android:id="@+id/imageView3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:src="@drawable/bateri" />

 
 </LinearLayout>
 

 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >


     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.14"
         android:text="@string/dramatiksincap" />


     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.14"
         android:text="@string/seytanikahkaha" />


     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.14"
         android:text="@string/bateri" />

 </LinearLayout>
 
 
 <LinearLayout 
     android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

     <ToggleButton
         android:id="@+id/togg1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textOn="@string/durdur"
         android:textOff="@string/oynat"
          />

     <ToggleButton
         android:id="@+id/togg2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textOn="@string/durdur"
         android:textOff="@string/oynat"
          />

     <ToggleButton
         android:id="@+id/togg3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textOn="@string/durdur"
         android:textOff="@string/oynat"
          />
     
     </LinearLayout>
     
 <LinearLayout 
     android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:src="@drawable/kalpatisi" />

     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:src="@drawable/trololo" />

     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:src="@drawable/kedicanini" />
     
     </LinearLayout>
     
 <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">



     <TextView
         android:id="@+id/textView4"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_weight="1"
         android:text="@string/kalpatisi" />




     <TextView
         android:id="@+id/textView5"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_weight="1"
         android:text="@string/trololol" />




     <TextView
         android:id="@+id/textView6"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_weight="1"
         android:text="@string/kedicanini" />
     
     </LinearLayout>
     
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

      <ToggleButton
          android:id="@+id/togg4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textOn="@string/durdur"
         android:textOff="@string/oynat"
           />

      <ToggleButton
          android:id="@+id/togg5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textOn="@string/durdur"
         android:textOff="@string/oynat"
           />

      <ToggleButton
          android:id="@+id/togg6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textOn="@string/durdur"
         android:textOff="@string/oynat"
           />
      
  </LinearLayout>
  
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

      <ImageView
          android:id="@+id/imageView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/haha" />

      <ImageView
          android:id="@+id/imageView8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/alkis" />

      <ImageView
          android:id="@+id/imageView9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/dede" />
      
  </LinearLayout>
  
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">




       <TextView
           android:id="@+id/textView7"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           android:layout_weight="1"
           android:text="@string/haha" />





       <TextView
           android:id="@+id/textView8"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           android:layout_weight="1"
           android:text="@string/alkis" />



       <TextView
           android:id="@+id/textView9"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           android:layout_weight="1"
           android:text="@string/dedeler" />
      
   </LinearLayout>
   
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

       <ToggleButton
           android:id="@+id/togg7"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:textOn="@string/durdur"
           android:textOff="@string/oynat"
            />

       <ToggleButton
           android:id="@+id/togg8"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:textOn="@string/durdur"
           android:textOff="@string/oynat"
            />

       <ToggleButton
           android:id="@+id/togg9"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:textOn="@string/durdur"
           android:textOff="@string/oynat"
            />
       
   </LinearLayout>

</LinearLayout>